# KangEngine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  vcpkg.json
assets/characters/kw/: kw.xml
assets/characters/kw/motions/: Walking.npy
assets/fonts/godoFont/: license.txt
assets/models/: kw5.xml
assets/objects/: ball.xml
assets/shaders/: checkerboard.fs  common.fs  common.vs  commonTex.fs  debug.fs  debug.vs  debug_checker.fs  light.fs  light.vs  shadow.vs  shadow_common.glsl  skinned_mesh.vs  skinned_shadow.vs  skinning_common.glsl  test.fs  test.vs
bindings/: bind.cpp  bind_animation.cpp  bind_new.cpp  bind_physics.cpp  bind_scene.cpp  py_array_view.hpp
examples/: backend_example.cpp  backend_light0.cpp  backend_material.cpp  backend_phong_light.cpp  base_template.cpp  debug_camera_frustum.cpp  ex2.cpp  light0.cpp  physx_drop_box.cpp  physx_hello.cpp  render_prim_scene.py  test.py  test_obj.cpp  test_prim_scene.cpp  test_prim_scene.py  test_prims.cpp  test_stl.cpp  test_xml.cpp  view_fbx_character.cpp
examples/legacy/: backend_light0.cpp  backend_material.cpp  backend_phong_light.cpp  scene_graph_example.cpp  scene_usd_example.cpp  test_obj.cpp  test_prim_scene.cpp  usd_example.cpp
examples/physics/: physx_articulation.cpp  physx_box_instancing.cpp  physx_h1_instancing.cpp  physx_h1_jointmonkey.cpp  physx_h1_ragdoll.cpp  xpbd_cloth.cpp
python/: MANIFEST.in  pyproject.toml
python/examples/: control_demo.py  mjcf_dof_control.py  physx_motion_tracking.py  physx_ragdoll.py  render_prim_scene.py  scene_python_simple.py  test_xml.py  view_fbx_character.py  view_fbx_character2.py  view_fbx_motion.py  view_motion.py  view_normalmap.py
python/kangengine/: __init__.py  _core.py  app.py  mimickit_engine.py  rigid.py  sim.py  state.py  visual.py
src/: ex1.cpp  ex2.cpp  kangEngine.hpp  main.cpp  test.cpp  test2.cpp
src/animation/: character_description.hpp  mjcf_loader.cpp  mjcf_loader.hpp  robot.cpp  robot.hpp  skel_mesh.cpp  skeleton_fk.cpp  skeleton_fk.hpp  skeleton_math.hpp  skeleton_motion.cpp  skeleton_motion.hpp  skeleton_state.cpp  skeleton_state.hpp  skeleton_tree.cpp  skeleton_tree.hpp  skinning.cpp  skinning.hpp
src/app/: app.cpp  app.hpp
src/asset/: fbx_loader.cpp  fbx_loader.hpp  import_diagnostics.hpp  mesh_loader.cpp  mesh_loader.hpp  mjcf_loader.cpp  mjcf_loader.hpp  usd_loader.cpp  usd_loader.hpp
src/backend/: graphics_factory.hpp
src/backend/base/: base_utils.cpp  graphics_device.hpp
src/backend/opengl/: opengl_device.cpp  opengl_device.hpp
src/bridge/: physics_bridge.cpp  physics_bridge.hpp  skeleton_bridge.cpp  skeleton_bridge.hpp  skinned_character_bridge.cpp  skinned_character_bridge.hpp
src/camera/: camera.cpp  camera.hpp
src/engine/core/app/: app.cpp  app.hpp
src/engine/core/ui/: base_panel.cpp  base_panel.hpp  panel_manager.cpp  panel_manager.hpp
src/engine/core/window/: window.cpp  window.hpp
src/engine/graphics/backend/base/: base_utils.hpp  graphics_device.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp
src/engine/graphics/backend/opengl/: opengl_device.cpp  opengl_device.hpp
src/engine/graphics/camera/: camera.cpp  camera.hpp
src/engine/graphics/material/: material.hpp
src/engine/graphics/renderer/: debug_renderer.cpp  debug_renderer.hpp  light.hpp  mesh_instancer.cpp  mesh_instancer.hpp  post_processor.cpp  post_processor.hpp  rasterizer.cpp  rasterizer.hpp  renderer.hpp
src/engine/scene/: debug_draw.cpp  debug_draw.hpp  scene_backend.cpp  scene_backend.hpp
src/engine/scene/native/: native_scene.cpp  prim.cpp  prim.hpp
src/engine/scene/usd/: usd_scene.cpp  usd_scene.hpp
src/geometry/: bounds.cpp  bounds.hpp  mesh_utils.hpp
src/input_handler/: input_handler.hpp
src/material/: colors.hpp  material.hpp  phongMaterials.hpp
src/mesh/: buffer.hpp  mesh_manager.cpp  mesh_manager.hpp  prim.cpp  prim.hpp  primitives.hpp  vao.hpp
src/physics/: articulation.cpp  articulation.hpp  physics.cpp  physics.hpp
src/renderer/: mesh_instancer.cpp  mesh_instancer.hpp  rasterizer.cpp  rasterizer.hpp  renderer.hpp
src/scene/: scene_backend.cpp  scene_backend.hpp
src/scene/native/: native_scene.cpp  native_scene.hpp  prim.cpp  prim.hpp  token.hpp  xform_token.cpp  xform_token.hpp
src/scene/usd/: usd_scene.cpp  usd_scene.hpp
src/shader/: shader.cpp  shader.hpp
src/sim/cloth/: cloth_model.cpp  cloth_model.hpp  cloth_solver.cpp  cloth_solver.hpp  cloth_state.hpp
src/texture/: texture.cpp  texture.hpp
src/ui/: base_panel.cpp  base_panel.hpp  panel.hpp  panel_manager.cpp  panel_manager.hpp
src/utils/: asset_path.hpp  glm_utils.cpp  glm_utils.hpp  load_utils.cpp  load_utils.hpp  print_debug.hpp  ray.hpp  types.hpp
src/window/: window.cpp  window.hpp
