[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kangengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
mimickit = [
    "gymnasium",
    "pyyaml",
    "torch>=1.9.1",
]
mimickit-video = [
    "moviepy",
]
mimickit-full = [
    "gymnasium",
    "moviepy",
    "pyyaml",
    "torch>=1.9.1",
]

[tool.setuptools]
packages = ["kangengine"]
include-package-data = true

[tool.setuptools.package-data]
kangengine = [
    "_kangengine.so",
    "assets/**/*",
]
